@@ -22,10 +22,7 @@
         SetCrossToolchainVariables
         [ "${DEFAULT_LIB_TYPE}" = "static" ] && \
             PrepareLibTypeOpts "both"
-        ConfigurePkgInBuildDir \
-            --prefix="${SYSROOT}/usr" \
-            ${LXE_CONFIGURE_OPTS} \
-            ${LIB_TYPE_OPTS}
+        ConfigureAutotoolsProjectInBuildDir
 
         BuildPkg -j ${JOBS}
         InstallPkg install
