@@ -35,10 +35,7 @@
         PrepareLibTypeOpts "shared"
         cd "${BUILD_DIR}/${PKG_SUBDIR}"
         autoreconf -vfi &>> "${LOG_DIR}/${PKG_SUBDIR}/configure.log"
-        ConfigurePkgInBuildDir \
-            --prefix="${SYSROOT}/usr" \
-            ${LXE_CONFIGURE_OPTS} \
-            ${LIB_TYPE_OPTS} \
+        ConfigureAutotoolsProjectInBuildDir \
             --enable-glx-tls \
             --enable-xcb \
             --disable-egl \
