@@ -4,8 +4,6 @@
 * Add support of (versioned) extra settings files.
 * Add new packages: yasm, libjpeg-turbo, protobuf, sdl2, qwt, boost.
 * Add new packages: exiv2, opencv. [Thanks to Eugene Petrov]
-* Improve DeleteExtraFiles() function: now `find` tool is used for searching
-  and removing of *.la files.
 * Fix build of mesa in systems with automake >= 1.15 and later.
 * Update in all configs:
   - GCC_EXTRA_VER from 5.1.0 to 5.4.0
@@ -28,11 +26,15 @@
   - GIFLIB_VER from 5.0.5 to 5.1.4
   - JPEG_TURBO_VER from 1.4.1 to 1.5.0
 * Update SetBuildFlags() function for better support of gcc-extra.
+* Improve DeleteExtraFiles() function: now `find` tool is used for searching
+  and removing of *.la files.
 * Provide different cmake toolchain files for different GCC versions:
   ${SYSROOT}/usr/share/cmake/${SYSTEM}.gcc-${GCC_CURRENT_VER}.conf.cmake
 * Add special special scripts with specified paths to toolchain files:
   ${PREFIX}/bin/${TARGET}-gcc-${GCC_CURRENT_VER}-cmake
 * Add UpdateCmakeSymlink() and improve ConfigureCmakeProject() functions.
+* Add ConfigureAutotoolsProject() and ConfigureAutotoolsProjectInBuildDir()
+  functions and use them where it is possible.
 
 --- v1.2 (2015-07-11) ---
 * Rewrite IsVer1GreaterOrEqualToVer2() function without using of dpkg
